# Read more about the various options under:
# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html

[metadata]
name = clm5nl
version = 0.1
description = CLM5 namelist generator
author = kvrigor
author_email = kvrigor@users.noreply.github.com
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python

[options]
zip_safe = False
packages = find_namespace:
package_dir = {clm5nl = clm5nl}
scripts = clm5nl-gen
install_requires =
    importlib-metadata; python_version<"3.8"
    docopt
    ruamel.yaml