project (stub_comps LANGUAGES Fortran)

foreach(component glc wav ice esp ocn)
    add_library(${component} STATIC)
    if(${component} STREQUAL glc)
        target_sources(glc PRIVATE glc_comp_mct.F90)
    elseif(${component} STREQUAL wav)
        target_sources(wav PRIVATE wav_comp_mct.F90)
    elseif(${component} STREQUAL ice)
        target_sources(ice PRIVATE ice_comp_mct.F90)
    elseif(${component} STREQUAL esp)
        target_sources(esp PRIVATE esp_comp_mct.F90)
    elseif(${component} STREQUAL ocn)
        target_sources(ocn PRIVATE ocn_comp_mct.F90)
    endif()
    target_link_libraries(${component} PRIVATE csm_share)
endforeach(component)